# lilah

./: Cargo.toml  LilahScriptingAPI.md  README.md  Test.md  \
.github/workflows/: main.yml  perl.yml  rust.yml
examples/adventure/: main.rs
examples/adventure/assets/: Untitled.json
examples/adventure/assets/scripts/: CamFollow.wren  Player.wren
examples/misc/: main.rs  pos.json
examples/misc/assets/: Untitled.json
examples/misc/assets/scripts/: Player.wren  Player2.wren
examples/multi/: main.rs
examples/multi/assets/scripts/: CamFollow.wren  Message.wren  Player.wren
examples/pong/: main.rs
examples/pong/assets/scripts/: Ball.wren  Game.wren  Paddle.wren
src/: application.rs  components.rs  gameobject.rs  input.rs  lib.rs  math.rs  renderer.rs  time.rs  world.rs
src/scripts/: ParticleSystem.wren  Trail.wren  WrenDoc.pl  WrenDocs.md  WrenDocs.pl  app.wren  engine.wren  game.md  game.wren  io.wren  lilah-scripting.md  lilah_scripting.md  math.wren  test.md
