[package]
name = "lilah"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = {version = "0.35.0", features = ["ttf","image","gfx","mixer","unsafe_textures"] }
ruwren = "0.4"
glob = "0.3.1"
debug_print = "1.0.0"
data2sound = "0.2.0"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
